# server

./: .env  .gitignore  Cargo.toml  README.md  site.db  test.sh
.github/workflows/: ci.yml
migrations/: 20250103040622_initial_schema.sql  20250110134802_initial_schema.sql
src/: db.rs  main.rs
src/db/: connection.rs  error.rs  mod.rs  post_repository.rs  tag_repository.rs
src/handlers/: mod.rs  post_handlers.rs  tag_handlers.rs
src/models/: errors.rs  mod.rs  post.rs  tag.rs  user.rs
